[machine] add the Linux host reader
Replace the Linux placeholder with the real reader. Every metric is read
through the sampler's readScoped helper (proc/sys files) or the statvfs
binding (disk), and every parse is total: a malformed field degrades to
Absent, never a throw.

* CPU from /proc/stat scaled by sysconf(_SC_CLK_TCK), memory and swap from
  /proc/meminfo, load from /proc/loadavg.
* cgroup v1 and v2, resolved at the process cgroup path from
  /proc/self/cgroup (not the hierarchy root): memory limit/usage, cpu
  quota/period, and cpu.stat throttling. Times are normalized to
  nanoseconds (v1 throttled_time is ns, v2 usec is microseconds); an
  unlimited v1 memory sentinel reads as Absent.
* PSI from /proc/pressure and cgroup v2 *.pressure as two separate
  families; cpu.full is parsed but not emitted.
* Disk per mount from /proc/mounts plus statvfs; LinuxBindings binds
  statvfs and sysconf via the C system library.

Decoders are pure functions tested against synthetic kernel fixtures for
both cgroup hierarchies and exact scaled values.